samples/_failures_safe/1761347860_5eff2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3d84c8f.c: In function ‘main’:
./samples/SAFE/__tmp_f3d84c8f.c:134:9: error: expected declaration or statement at end of input
  134 |         destroy_matrix(&mat1);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_f3d84c8f.c:134:9: error: expected declaration or statement at end of input
